# artais-cors-scout

./: README.md  pyproject.toml
cors_scout/: checks.py  cli.py  probes.py  report.py  util.py
tests/: test_checks.py
