[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artais-cors-scout"
version = "0.1.0"
description = "High-signal CORS misconfiguration and preflight auditor for offensive security."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Artais Security" }]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.1",
]

[project.scripts]
cors-scout = "cors_scout.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cors_scout*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
